--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.15.0",
     "confirm-click": "^0.7.0",
     "express": "^4.13.4",
+    "moment": "^2.12.0",
     "mongoose": "^4.4.12"
   },
   "devDependencies": {
